Made helper methods static